# brain-dev

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PROPOSED_README.md  PYPI_PUBLISH_GUIDE.md  PYPI_STATUS.md  README.md  README_TEMPLATE.md  REPO_METADATA.md  SECURITY.md  pyproject.toml  spec.md
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/issue_bodies/: 001-p0-readme-positioning.md  002-p0-quickstart-orchestration.md  003-p1-architecture-and-flow.md  004-p1-tool-routing-docs.md  005-p2-observability-and-debugging.md
.github/workflows/: coverage.yml  test.yml
LeaseGate/: LeaseGate.sln  LeaseGate.slnx
LeaseGate/samples/LeaseGate.SampleCli/: LeaseGate.SampleCli.csproj  Program.cs  policy.json
LeaseGate/src/LeaseGate.Audit/: LeaseGate.Audit.csproj
LeaseGate/src/LeaseGate.Client/: GovernedModelCall.cs  LeaseGateClient.cs  LeaseGateClientOptions.cs
LeaseGate/src/LeaseGate.Service/: LeaseGate.Service.csproj
LeaseGate/tests/LeaseGate.Tests/: LeaseGate.Tests.csproj  (+1 more)
brain_dev/: analyzer.py  server.py  smart_test_generator.py
dev_brain/: __init__.py  analyzer.py  config.py  server.py  smart_test_generator.py
docs/media/: README.md
tests/: __init__.py  conftest.py  test_analyzer.py  test_analyzers_batch3.py  test_behavior_generator_batch2.py  test_coverage_gaps.py  test_data_models_batch1.py  test_golden.py  test_integration.py  test_new_analyzers.py  test_new_tools.py  test_security_smartgen_batch4.py  test_server.py  test_server_tools_batch5.py  test_smart_generator.py
(+6 files in other folders)
