[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dev-brain"
version = "1.0.0"
description = "Intelligent developer insights MCP server - analyzes coverage, suggests tests, and provides UX insights"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "AI Workstation" }
]
keywords = ["mcp", "developer", "testing", "coverage", "ai", "agents"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/mikeyfrilot/dev-brain"
Repository = "https://github.com/mikeyfrilot/dev-brain"
Issues = "https://github.com/mikeyfrilot/dev-brain/issues"

[project.scripts]
dev-brain = "dev_brain.server:main"

[tool.hatch.build.targets.wheel]
packages = ["dev_brain"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
